--- a/section_5_express.js/views/shop.html
+++ b/section_5_express.js/views/shop.html
@@ -6,14 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Add Product</title>
+    <style>
+        body{
+            padding: 0;
+            margin: 0;
+            font-family: sans-serif;
+        }
+        .main-header__nav{
+            height: 100%;
+            display: flex;
+        }
+        .main-header{
+            width: 100%;
+            height: 3.5rem;
+            background-color: #dbc441;
+            padding: 0 1.5rem;
+        }
+
+        .main-header__item-list{
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            align-items: center;
+        }
+        .main-header__items{
+            margin: 0 1rem;
+            padding: 0;
+        }
+        .main-header__items a{
+            text-decoration: none;
+            color: #000000;
+        }
+        .main-header__items a:hover,
+        .main-header__items a:active,
+        .main-header__items a.active{
+            color: #3e00a1;
+        }
+        main{
+            padding: 1rem;
+        }
+    </style>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/">Shop</a></li>
-                <li><a href="/add-product">Add Product</a></li>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__items"><a class="active"  href="/">Shop</a></li>
+                <li class="main-header__items"><a href="/admin/add-product">Add Product</a></li>
             </ul>
         </nav>
     </header>
