--- a/section_5_express.js/views/shop.html
+++ b/section_5_express.js/views/shop.html
@@ -6,47 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Add Product</title>
-    <style>
-        body{
-            padding: 0;
-            margin: 0;
-            font-family: sans-serif;
-        }
-        .main-header__nav{
-            height: 100%;
-            display: flex;
-        }
-        .main-header{
-            width: 100%;
-            height: 3.5rem;
-            background-color: #dbc441;
-            padding: 0 1.5rem;
-        }
-
-        .main-header__item-list{
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            align-items: center;
-        }
-        .main-header__items{
-            margin: 0 1rem;
-            padding: 0;
-        }
-        .main-header__items a{
-            text-decoration: none;
-            color: #000000;
-        }
-        .main-header__items a:hover,
-        .main-header__items a:active,
-        .main-header__items a.active{
-            color: #3e00a1;
-        }
-        main{
-            padding: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
