--- a/section_6_dynamic_content/views/shop.pug
+++ b/section_6_dynamic_content/views/shop.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Shop
+        title #{docTitle}
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/product.css")
     body
@@ -15,3 +15,19 @@ html(lang="en")
                         a.active(href="/") Shop
                     li.main-header__item
                         a.active(href="/admin/add-product") Add Product  
+            main
+                if prods.length > 0
+                    .grid
+                        each product in prods
+                            article.card.product-item
+                                header.card__header
+                                    h1.product__title #{product.title}
+                                .card__image
+                                    img(src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQjjYj-FBwv7F_7wE0aGCZJ_CKz5Npt1-F10CDTPEL9jUv3kMtN", alt="A Book")
+                                .card__content
+                                    h2.product__price $19.99
+                                    p.product__description A very interesting book about so many even more interesting things!
+                                .card__actions
+                                    button.btn Add to Cart
+                else
+                    h1 No Products
