--- a/section_11_sequelize/public/css/main.css
+++ b/section_11_sequelize/public/css/main.css
@@ -196,6 +196,18 @@ form {
 .centered{
   text-align: center;
 }
+.image{
+  padding:1rem;
+  margin: auto;
+}
+
+.image{
+  max-height: 20rem;
+  height: 20rem;
+}
+.image> img{
+  height: 100%;
+}
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
