--- a/section_11_sequelize/views/shop/cart.ejs
+++ b/section_11_sequelize/views/shop/cart.ejs
@@ -18,6 +18,9 @@
                         </li>
                     <% }) %>
                 </ul>
+                <form action="/create-order" method="post" style="display: flex; align-items: center; justify-content: center;">
+                    <button style="margin-left: auto; margin-top: 1rem; margin-right: 2rem;" type="submit" class="btn">Order Now!</button>
+                </form>
             <% } else { %>
                 <h1>No products in the cart.</h1>
             <% } %>
