--- a/section_12_nosql_mongodb/public/css/main.css
+++ b/section_12_nosql_mongodb/public/css/main.css
@@ -19,6 +19,18 @@ form {
   display: inline;
 }
 
+.centered {
+  text-align: center;
+}
+
+.image {
+  height: 20rem;
+}
+
+.image img {
+  height: 100%;
+}
+
 .main-header {
   width: 100%;
   height: 3.5rem;
@@ -193,21 +205,17 @@ form {
   color: white;
 }
 
-.centered{
-  text-align: center;
-}
-.image{
-  padding:1rem;
-  margin: auto;
+.btn.danger {
+  color: red;
+  border-color: red;
 }
 
-.image{
-  max-height: 20rem;
-  height: 20rem;
+.btn.danger:hover,
+.btn.danger:active {
+  background: red;
+  color: white;
 }
-.image> img{
-  height: 100%;
-}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
