--- a/section_12_nosql_mongodb/views/shop/orders.ejs
+++ b/section_12_nosql_mongodb/views/shop/orders.ejs
@@ -1,26 +1,31 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/orders.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <main>
-            <% if (orders.length <= 0) { %>
-            <h1>Nothing there!</h1>
-            <% } else {%>
-                <ul>
-                    <% orders.forEach(order => { %>
-                        <li>
-                            <h2># <%= order.id %></h2>
-                            <ul>
-                                <% order.products.forEach( product => { %>
-                                    <li><%= product.title %> (<%= product.orderItem.quantity %>)</li>
+            <main>
+                <% if (orders.length <= 0) { %>
+                    <h1>Nothing there!</h1>
+                    <% } else {%>
+                        <ul class="orders">
+                            <% orders.forEach(order => { %>
+                                <li class="orders__item">
+                                    <h2>Order - #
+                                        <%= order._id %>
+                                    </h2>
+                                    <ul class="orders__products">
+                                        <% order.items.forEach( product => { %>
+                                            <li class="orders__products-item">
+                                                <%= product.title %> (
+                                                    <%= product.quantity %>)</li>
+                                            <% }) %>
+                                                <li></li>
+                                    </ul>
+                                </li>
                                 <% }) %>
-                                <li></li>
-                            </ul>
-                        </li>
-                    <% }) %>
-                    
-                </ul>
-            <% } %>
-        </main>
-        <%- include('../includes/end.ejs') %>
+
+                        </ul>
+                        <% } %>
+            </main>
+            <%- include('../includes/end.ejs') %>
