--- a/section_13_working_with_mongoose/views/shop/orders.ejs
+++ b/section_13_working_with_mongoose/views/shop/orders.ejs
@@ -15,10 +15,10 @@
                                         <%= order._id %>
                                     </h2>
                                     <ul class="orders__products">
-                                        <% order.items.forEach( product => { %>
+                                        <% order.products.forEach( p => { %>
                                             <li class="orders__products-item">
-                                                <%= product.title %> (
-                                                    <%= product.quantity %>)</li>
+                                                <%= p.product.title %> (
+                                                    <%= p.quantity %>)</li>
                                             <% }) %>
                                                 <li></li>
                                     </ul>
