--- a/section_17_advanced-authentication/views/auth/new-password.ejs
+++ b/section_17_advanced-authentication/views/auth/new-password.ejs
@@ -11,12 +11,13 @@
                         <%= errorMessage %>
                     </div>
                     <% } %>
-                        <form class="login-form" action="/login" method="POST">
+                        <form class="login-form" action="/new-password" method="POST">
                             <div class="form-control">
-                                <label for="password">Password</label>
+                                <label for="password">Password</label> 
                                 <input type="password" name="password" id="password">
                             </div>
                             <input type="hidden" name="userId" value="<%= userId %>">
+                            <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <button class="btn" type="submit">Submit</button>
                         </form>
