Adding validation to the login page using express-validator

--- a/section_18_validation/public/css/forms.css
+++ b/section_18_validation/public/css/forms.css
@@ -21,3 +21,7 @@
 .form-control textarea:focus {
   outline-color: #00695c;
 }
+
+.form-control input.invalid{
+  border: 2px solid rgb(255, 98, 98);
+}
