--- a/section_18_validation/views/auth/login.ejs
+++ b/section_18_validation/views/auth/login.ejs
@@ -15,11 +15,21 @@
                         <form class="login-form" action="/login" method="POST" novalidate >
                             <div class="form-control">
                                 <label for="email">E-Mail</label>
-                                <input type="email" name="email" id="email" value="<%= oldInput.email %>">
+                                <input 
+                                    type="email" 
+                                    name="email" 
+                                    id="email" 
+                                    value="<%= oldInput.email %>"
+                                    class="<%= validationErrors.find(e=>e.param==='email')?'invalid':'valid' %>">
                             </div>
                             <div class="form-control">
                                 <label for="password">Password</label>
-                                <input type="password" name="password" id="password" value="<%= oldInput.password %>">
+                                <input 
+                                    type="password" 
+                                    name="password" 
+                                    id="password" 
+                                    value="<%= oldInput.password %>"
+                                    class="<%= validationErrors.find(e=>e.param==='password')?'invalid':'valid' %>">
                             </div>
                             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                             <button class="btn" type="submit">Login</button>
