--- a/section_20_files/views/admin/edit-product.ejs
+++ b/section_20_files/views/admin/edit-product.ejs
@@ -22,7 +22,7 @@
                             value="<% if (editing) { %><%= product.title %><% } else { %> <%=oldInput.title%> <% } %>"
                             class="<%= validationErrors.find(e=>e.param === 'title') ? 'invalid' : '' %>">
                     </div>
-                    <div class="form-control">
+                    <!-- <div class="form-control">
                         <label for="imageUrl">Image URL</label>
                         <input type="text" 
                             name="imageUrl" 
@@ -30,7 +30,16 @@
                             value="<% if (editing) { %><%= product.imageUrl %><% }else { %> <%=oldInput.imageUrl %> <% } %>"
                             class="<%= validationErrors.find(e=>e.param === 'imageUrl') ? 'invalid' : '' %>">
                             
+                    </div> -->
+                    <div class="form-control">
+                        <label for="image">Image</label>
+                        <input type="file" 
+                            name="image" 
+                            id="image" 
+                        >
+                            
                     </div>
+
                     <div class="form-control">
                         <label for="price">Price</label>
                         <input 
