Deleting files using file system package

--- a/section_20_files/views/shop/orders.ejs
+++ b/section_20_files/views/shop/orders.ejs
@@ -15,10 +15,11 @@
                 <ul class="orders__products">
                     <% order.products.forEach(p => { %>
                     <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>) 
-                        | <a href="/orders/<%= order._id%>">Invoice</a>
+                       
                     </li>
                     <% }); %>
                 </ul>
+                <a href="/orders/<%= order._id%>">Get Invoice</a>
             </li>
             <% }); %>
         </ul>
