--- a/section_21_pagination/views/shop/product-list.ejs
+++ b/section_21_pagination/views/shop/product-list.ejs
@@ -5,35 +5,48 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
 
-            <main>
+            <main class="container-fluid">
                 <% if (prods.length > 0) { %>
-                    <div class="grid">
-                        <% for (let product of prods) { %>
-                            <article class="card product-item">
-                                <header class="card__header">
-                                    <h1 class="product__title">
-                                        <%= product.title %>
-                                    </h1>
-                                </header>
-                                <div class="card__image">
-                                    <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
+                    <div class="shelf">
+                        <div class="grid row">
+                            <% for (let product of prods) { %>
+                            <div class="col-sm-3">
+                                <div class="card">
+                                    <img class="card-img-top" src="/<%= product.imageUrl %>" alt="<%= product.title %>"
+                                        height="250px">
+                                    <div class="card-body">
+                                        <div class="text-center">
+                                            <b class="product__price">$
+                                                <%= product.price %>
+                                            </b>
+                                        </div>
+                                        <div class="card-title text-center">
+                                            <b><%= product.title %></b>
+                                        </div>
+                                        <div class="card-text">
+                                            <p class="product__description text-left">
+                                                <%= product.description %>
+                                            </p>
+                                        </div>
+                                        <div class="card-foote">
+                                            <div class="card__actions">
+                                                <div class="row">
+                                                    <div class="col-sm-6">
+                                                        <a href="/products/<%= product._id %>" class="btn btn-sm btn-outline-primary">Details</a>
+                                                    </div>
+                                                    <div class="col-sm-6">
+                                                        <% if (isAuthenticated) { %>
+                                                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                                                        <% } %>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="card__content">
-                                    <h2 class="product__price">$
-                                        <%= product.price %>
-                                    </h2>
-                                    <p class="product__description">
-                                        <%= product.description %>
-                                    </p>
-                                </div>
-                                <div class="card__actions">
-                                    <a href="/products/<%= product._id %>" class="btn">Details</a>
-                                    <% if (isAuthenticated) { %>
-                                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
-                                    <% } %>
-                                </div>
-                            </article>
+                            </div>
                             <% } %>
+                        </div>
                     </div>
                     <% } else { %>
                         <h1>No Products Found!</h1>
