--- a/section_21_pagination/public/css/main.css
+++ b/section_21_pagination/public/css/main.css
@@ -170,6 +170,9 @@ form {
 
 .card {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    height: 500px;
+    min-height: 400px;
+    max-height: 500px;
 }
 
 .card__header,
@@ -202,7 +205,7 @@ form {
     margin: 0 0.25rem;
 }
 
-.btn {
+.btn-l {
     display: inline-block;
     padding: 0.25rem 1rem;
     text-decoration: none;
@@ -214,19 +217,19 @@ form {
     cursor: pointer;
 }
 
-.btn:hover,
-.btn:active {
+.btn-l:hover,
+.btn-l:active {
     background-color: #00695c;
     color: white;
 }
 
-.btn.danger {
+.btn-l.danger {
     color: red;
     border-color: red;
 }
 
-.btn.danger:hover,
-.btn.danger:active {
+.btn-l.danger:hover,
+.btn-l.danger:active {
     background: red;
     color: white;
 }
@@ -258,3 +261,4 @@ form {
         width: 30rem;
     }
 }
+
