--- a/section_21_pagination/views/admin/products.ejs
+++ b/section_21_pagination/views/admin/products.ejs
@@ -10,7 +10,7 @@
         <div class="shelf">
             <div class="grid row">
                 <% for (let product of prods) { %>
-                <div class="col-sm-3">
+                <div class="col-sm-3 my-3">
                     <div class="card">
                         <img class="card-img-top" src="/<%= product.imageUrl %>" alt="<%= product.title %>"
                             height="250px">
@@ -33,13 +33,13 @@
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <a href="/admin/edit-product/<%= product._id %>?edit=true"
-                                                class="btn">Edit</a>
+                                                class="btn btn-sm btn-outline-primary">Edit</a>
                                         </div>
                                         <div class="col-sm-6">
                                             <form action="/admin/delete-product" method="POST">
                                                 <input type="hidden" value="<%= product._id %>" name="productId">
                                                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                                <button class="btn" type="submit">Delete</button>
+                                                <button class="btn btn-sm btn-outline-primary" type="submit">Delete</button>
                                             </form>
                                         </div>
                                     </div>
