--- a/section_21_pagination/views/shop/index.ejs
+++ b/section_21_pagination/views/shop/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/product.css">
+<link rel="stylesheet" href="/css/product.css">
 </head>
 
 <body>
@@ -7,65 +7,69 @@
 
     <main class="container-fluid">
         <% if (prods.length > 0) { %>
-            <div class="shelf">
-                <div class="grid row">
-                    <% for (let product of prods) { %>
-                    <div class="col-sm-3">
-                        <div class="card">
-                            <img class="card-img-top" src="/<%= product.imageUrl %>" alt="<%= product.title %>"
-                                height="250px">
-                            <div class="card-body">
-                                <div class="text-center">
-                                    <b class="product__price">$
-                                        <%= product.price %>
-                                    </b>
-                                </div>
-                                <div class="card-title text-center">
-                                    <b><%= product.title %></b>
-                                </div>
-                                <div class="card-text">
-                                    <p class="product__description text-left">
-                                        <%= product.description %>
-                                    </p>
-                                </div>
-                                <div class="card-foote">
-                                    <div class="card__actions">
-                                        <div class="row">
-                                            <div class="col-sm-6">
-                                                <a href="/products/<%= product._id %>" class="btn btn-sm btn-outline-primary">Details</a>
-                                            </div>
-                                            <div class="col-sm-6">
-                                                <% if (isAuthenticated) { %>
-                                                    <%- include('../includes/add-to-cart.ejs', {product: product}) %>
-                                                <% } %>
-                                            </div>
+        <div class="shelf">
+            <div class="grid row">
+                <% for (let product of prods) { %>
+                <div class="col-sm-3 my-3">
+                    <div class="card">
+                        <img class="card-img-top" src="/<%= product.imageUrl %>" alt="<%= product.title %>"
+                            height="250px">
+                        <div class="card-body">
+                            <div class="text-center">
+                                <b class="product__price">$
+                                    <%= product.price %>
+                                </b>
+                            </div>
+                            <div class="card-title text-center">
+                                <b><%= product.title %></b>
+                            </div>
+                            <div class="card-text">
+                                <p class="product__description text-left">
+                                    <%= product.description %>
+                                </p>
+                            </div>
+                            <div class="card-foote">
+                                <div class="card__actions">
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <a href="/products/<%= product._id %>"
+                                                class="btn btn-sm btn-outline-primary">Details</a>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <% if (isAuthenticated) { %>
+                                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                                            <% } %>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <% } %>
+                </div>
+                <% } %>
+            </div>
+        </div>
+        <% } else { %>
+        <h1>No Products Found!</h1>
+        <% } %>
+        <div class="container">
+            <div class="row justify-content-center my-4">
+                <div class="col-md-10">
+                    <nav aria-label="Products pagination navs">
+                        <ul class="pagination">
+                            <li class="page-item" aria-current="page">
+                                <a class="page-link" href="/?page=1">1</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="/?page=2">2</a>
+                            </li>
+                            <li class="page-item">
+                                <a class="page-link" href="/?page=3">3</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
-            <section class="pagination my-4">
-                <nav aria-label="Products pagination navs">
-                    <ul class="pagination">
-                        <li class="page-item active" aria-current="page">
-                            <a class="page-link" href="/?page=1">1</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="/?page=2">2</a>
-                        </li>
-                        <li class="page-item">
-                            <a class="page-link" href="/?page=3">3</a>
-                        </li>
-                    </ul>
-                </nav>
-            </section>
-            
-        <% } else { %>
-            <h1>No Products Found!</h1>
-        <% } %>
+        </div>
     </main>
-<%- include('../includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
