Reusing pagination for shop and product lists
Passed query params without path so that it is appended to the current url

--- a/section_21_pagination/views/shop/product-list.ejs
+++ b/section_21_pagination/views/shop/product-list.ejs
@@ -47,6 +47,8 @@
                             </div>
                             <% } %>
                         </div>
+                        <%- include('../includes/pagination.ejs', {currentPage: currentPage, hasNext: hasNext, hasPrevious: hasPrevious, previousPage: previousPage, nextPage: nextPage,lastPage: lastPage}) %>
+
                     </div>
                     <% } else { %>
                         <h1>No Products Found!</h1>
