Sending and handling background requests using javascript
We configured the delete product route to accept a query param that we pass in our fetch method withing the client js /public/js/admin.js

--- a/section_22_async_requests/views/admin/products.ejs
+++ b/section_22_async_requests/views/admin/products.ejs
@@ -36,7 +36,7 @@
                                                 class="btn btn-sm btn-outline-primary">Edit</a>
                                         </div>
                                         <div class="col-sm-6">
-                                            <!-- <form action="/admin/delete-product" method="POST"> -->
+                                            <!-- <form action="/admin/delete-product" method="POST" id="producteditform"> -->
                                                 <input type="hidden" value="<%= product._id %>" name="productId">
                                                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                                                 <button class="btn btn-sm btn-outline-primary" type="submit" id="deleteBtn" onclick="deleteProduct(this)">Delete</button>
