Added Paypal as payment method

--- a/section_23_adding_payments/views/shop/checkout.ejs
+++ b/section_23_adding_payments/views/shop/checkout.ejs
@@ -7,24 +7,109 @@
         <div class="row">
             <div class="col-sm-12">
                 <% if (products.length > 0) { %>
-                    <ul class="cart__item-list" style="list-style: none;">
-                        <% products.forEach(p => { %>
-                        <li class="cart__item alert alert-info">
-                            <h5>
-                                <%= p.productId.title %>
-                            </h5>
-                            <h6>Quantity:
-                                <%= p.quantity %>
-                            </h6>
-                        </li>
-                        <% }) %>
-                    </ul>
-                    <hr>
-                    <h3 class="text-right"><span class="badge badge-pill badge-light">Total cost: <%= totalCost %></span></h3>
-                    <% } else { %>
-                    <h4>No Orders Yet!</h4>
-                    <% } %>
+                <ul class="cart__item-list" style="list-style: none;">
+                    <% products.forEach(p => { %>
+                    <li class="cart__item alert alert-info">
+                        <h5>
+                            <%= p.productId.title %>
+                        </h5>
+                        <h6>Quantity:
+                            <%= p.quantity %>
+                        </h6>
+                    </li>
+                    <% }) %>
+                </ul>
+                <hr>
+                <h3 class="text-right">
+                    <span class="badge badge-pill badge-light">Total cost: <%= totalSum %></span>
+                </h3>
+                <h6 class="text-left px-5"><b>Checkout with</b></h6>
+                <hr>
+                <div class="container">
+                    <div class="row justify-content-end">
+                        <div class="col-sm-4">
+                            <script
+                                src="https://www.paypal.com/sdk/js?client-id=AdtRuld3t5p-CQnGzt-hdqq2t4OQ4K2y1SdoVGm2GqaGKNZo5naC4OwjWvGor1zHEJ3Nl9Q7kJ4K17-b"></script>
+                            <div id="paypal-button-container"></div>
+                            <script>
+                                let info = "0000";
+                                let url;
+                                // console.log('<%=totalSum%>');
+                                paypal.Buttons({
+                                    createOrder: function (data, actions) {
+                                        // This function sets up the details of the transaction, including the amount and line item details.
+                                        return actions.order.create({
+                                            intent: 'CAPTURE',
+                                            purchase_units: [{
+                                                amount: {
+                                                    currency_code: 'USD',
+                                                    value: '<%=totalSum%>'
+                                                }
+                                            }]
+                                        });
+                                    },
+                                    onApprove: function (data, actions) {
+                                        // This function captures the funds from the transaction.
+                                        return actions.order.capture().then(function (details) {
+                                            // This function shows a transaction success message to your buyer.
+                                            info = data;
+                                            url = window.location.origin + '/checkout';
+
+                                            console.log(info);
+                                            let o = document.getElementById('orderId');
+                                            let p = document.getElementById('payerId');
+                                            let f = document.getElementById('fid');
+
+                                            o.value = info.orderID;
+                                            p.value = info.payerID;
+                                            f.value = info.facilitatorAccessToken;
+
+                                            $('#checkoutModal').modal('show');
+                                        });
+
+                                        
+                                    }
+
+                                }).render('#paypal-button-container');
+                            </script>
+                        </div>
+                    </div>
+                </div>
+
+                <% } else { %>
+                <h4>No Orders Yet!</h4>
+                <% } %>
             </div>
         </div>
     </main>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#checkoutModal">
+        Launch demo modal
+    </button>
+
+    <!-- Modal -->
+    <div data-backdrop="static" data-keyboard="false" class="modal fade" id="checkoutModal" tabindex="-1" role="dialog" aria-labelledby="checkoutModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="checkoutModalLabel">Payment Successul</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-2 alert alert-info" role="alert">
+                        Your payment of <%=totalSum%> has been recieved successfully.
+                        <br>
+                        Thank you for shopping with Abc Merchants!
+                    </div>
+                    <form action="/checkout" method="post">
+                        <input type="hidden" name="orderId" id="orderId">
+                        <input type="hidden" name="payerId" id="payerId">
+                        <input type="hidden" name="facilitatorAccessToken" id="fid">
+                        <!-- <input type="hidden" name="_csrf"> -->
+                        <input type="submit" class="btn btn-info" value="Next" data-toggle="modal" data-target="#checkoutModal">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <%- include('../includes/end.ejs') %>
